
SVN
-------------------------------

All:   Resolved issue CASTOR-1689 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Removed redundant 'API' Javadocs from build/HTML docs.
       Details: http://jira.codehaus.org/browse/CASTOR-1689
       (Edward - 20061212)

XML:   Resolved issue CASTOR-1592 using contribution from Edward Kuns [edward.kuns@aspect.com]
       regression import test fails
       Details: http://jira.codehaus.org/browse/CASTOR-1592
       (Edward - 20061211)

XML:   Resolved issue CASTOR-1672 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add to CTF test header the minimum JVM version for this test
       Details: http://jira.codehaus.org/browse/CASTOR-1672
       (Edward - 20061211)

XML:   Resolved issue CASTOR-1716 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Enhance CTF test names to include the directory tree path information
       Details: http://jira.codehaus.org/browse/CASTOR-1716
       (Edward - 20061210)

XML:   Resolved issue CASTOR-1726 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Add documentation about support for anonymous complex/simply types in binding files
       Details: http://jira.codehaus.org/browse/CASTOR-1726
       (Werner - 20061210)

XML:   Resolved issue CASTOR-1725 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Add documentation about new <enumBinding>s in code generation binding
       Details: http://jira.codehaus.org/browse/CASTOR-1725
       (Werner - 20061210)

XML:   Resolved issue CASTOR-1491 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for <enumBinding> elements during XML code generation.
       Details: http://jira.codehaus.org/browse/CASTOR-1491
       (Werner - 20061209)

XML:   Resolved issue CASTOR-1724 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add ability to invoke arbitrary user-supplied code in a CTF unit test