@@ -226,6 +226,27 @@
 
             </summary>
             <bugs>
+                <bug id="1696" tool="jira">
+                    <description>
+                        Fixed problem related to creating incorrectly typed 
+                        setXXXAsReference() method for 'j2' mode.
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </reporter>
+                    <type>Enh.</type>
+                    <module>All</module>
+                    <date>20061212</date>
+                </bug>
                 <bug id="1689" tool="jira">
                     <description>
                         Removed redundant 'API' Javadocs from build/HTML docs.
