@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+All:   Resolved issue CASTOR-1696 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Fixed problem related to creating incorrectly typed setXXXAsReference() method for 'j2' mode.
+       Details: http://jira.codehaus.org/browse/CASTOR-1696
+       (Edward - 20061212)
+
 All:   Resolved issue CASTOR-1689 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Removed redundant 'API' Javadocs from build/HTML docs.
        Details: http://jira.codehaus.org/browse/CASTOR-1689
